# StickytrapImagerV1.5

./: .gitignore  Installation.md  README.md  StickytrapImager(X-coordinates).txt  StickytrapImager(decent1mmoverlapcoordinates).txt  StickytrapImager(een-derde-overlap-big-stickytraps).txt  StickytrapImager(inconsistentStepsNoOverlap).txt  StickytrapImager(restorepoint 18_12_2023).orig  StickytrapImager.py  StickytrapImager.py.bak.orig  StickytrapImager_1.6.py  StickytrapImager_IWM24.py  StickytrapImager_RUG.py  StickytrapImager_RUG.py.bak20240106-1610  assemble_stitched_image.py  crop_12wells_iwm24.py  imgmagick_montage_script.sh  pyImagJ_convert_standard.py  pyImagJtest.py  pyproject.toml
assets/MIST/: global-positions-0.txt
